[package]
name = "x11uri"
version = "0.1.0"
edition = "2021"
default-run = "x11uri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
open = "5.0.0"
simple-error = "0.3.0"
x11rb = "0.12.0"

[profile.small]
inherits = "release"
lto = true
codegen-units = 1
